Center align content for keys to fix spacing when viewed on smaller screen size

--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ body.fade {
   min-height: 100vh;
   align-items: center;
   justify-content: center;
+  align-content: center;
 }
 
 .key {
